Increase spacing below avatar zoom slider a bit in order to avoid accidentally clicking on the buttons

--- a/rtg/src/components/profile/BigEditableAvatar.scss
+++ b/rtg/src/components/profile/BigEditableAvatar.scss
@@ -18,6 +18,7 @@
   &__slider-wrapper {
     display: flex;
     align-items: center;
+    margin-bottom: 10px;
   }
 
   &__slider {
